--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
-PORT=8000
-MONGODB_URI=
-MONGODB_PASSWORD=
+NODE_PORT=8000
+
+MONGODB_USER=root
+MONGODB_PASSWORD=123456
+MONGODB_DATABASE=insightify
+MONGODB_PORT=27017
+
+
