--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "precommit": "pretty-quick --staged",
-    "prepare": "husky install .husky"
+    "format": "pnpx prettier --write ."
   },
   "repository": {
     "type": "git",
