Bug fix in error handler

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 NODE_PORT=8000
-
+NODE_ENV=development
 MONGODB_USER=vasanthnaveen2011
 MONGODB_PASSWORD=X8Q7e4WnG8U188tS
 MONGODB_DATABASE=insightify
 MONGODB_PORT=27017
-JWT_SECRET="hyper-insightify"
+JWT_SECRET=hyper-insightify
 JWT_EXPIRES_IN=10
 JWT_COOKIE_EXPIRES_IN=10
