--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ MONGODB_PASSWORD=X8Q7e4WnG8U188tS
 MONGODB_DATABASE=insightify
 MONGODB_PORT=27017
 JWT_SECRET=hyper-insightify
-JWT_EXPIRES_IN=10
+JWT_EXPIRES_IN=10d
 JWT_COOKIE_EXPIRES_IN=10
