--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "mongoose": "^8.1.1",
     "multer": "1.4.5-lts.1",
     "nodemailer": "^6.9.9",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
   },
